--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
   themes: forest --default;
 }
 
-@theme inline {
+/*@theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -120,4 +120,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+}*/
